<resources>
    <string name="app_name">BBS Tax</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_url">https://www.facebook.com/BetterBusinessServiceInc</string>
    <string name="twitter_url">https://twitter.com/@bbstax</string>
    <string name="website_url">http://www.bbstax.com</string>
    <string name="website_logic_url">http://www.taxlogic.com</string>
    <string name="feedback_email">app@bbstax.com</string>
    <string name="delete_item">Are you sure to delete this item?</string>
    <string name="home">Home</string>
    <string name="calculators">Calculators</string>
    <string name="trackers">Trackers</string>
    <string name="taxpc">Tax Prep Checklist</string>
    <string name="mydocs">My Documents</string>
    <string name="contacts">Contacts</string>
    <string name="about_us">About Us</string>
    <string name="legal_disclaimer">Legal Disclaimer</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="saving">Saving</string>
    <string name="savings">Savings</string>
    <string name="total_savings">total savings</string>
    <string name="initial_investment">Initial Investment</string>
    <string name="monthly_investment">Monthly Investment</string>
    <string name="enter_investment_amount">Enter investment amount</string>
    <string name="years">Years</string>
    <string name="enter_years_amount">Enter years amount</string>
    <string name="compounded">Compounded</string>
    <string name="annual_rate_of_interest">Annual Rate of Interest</string>
    <string name="enter_rate">Enter rate</string>
    <string name="monthly">Monthly</string>
    <string name="quarterly">Quarterly</string>
    <string name="semiannually">Semiannually</string>
    <string name="annually">Annually</string>
    <string name="please_enter_initial_amount">Please enter initial amount.</string>
    <string name="please_enter_monthly_amount">Please enter monthly amount.</string>
    <string name="please_enter_years_amount">Please enter years amount.</string>
    <string name="please_enter_interest_rate">Please enter interest rate.</string>
    <string name="loan_amortization">Loan Amortization</string>
    <string name="loan_payment_amount">loan payment amount</string>
    <string name="monthly_loan_payment_amount">monthly loan payment amount</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="enter_loan_amount">Enter loan amount</string>
    <string name="loan_term_years">Loan Term (in Years)</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="please_enter_loan_amount">Please enter loan amount.</string>
    <string name="loan_payoff">Loan Early Payoff</string>
    <string name="additional_each_month">additional each month</string>
    <string name="total_monthly_payment">total monthly payment</string>
    <string name="total_interest">total interest</string>
    <string name="total_paid">total paid</string>
    <string name="actual_payoff_time">actual payoff time</string>
    <string name="loan_term_months">Loan Term (in Months)</string>
    <string name="desired_payoff_time">Desired Payoff Time (in Months)</string>
    <string name="enter_month_amount">Enter month amount</string>
    <string name="additional_payment">Additional Payment</string>
    <string name="enter_monthly_payment">Enter monthly payment</string>
    <string name="annual_interest_rate">Annual Interest Rate</string>
    <string name="please_enter_loan_term">Please enter loan term.</string>
    <string name="please_enter_additional_payment">Please enter additional payment.</string>
    <string name="please_enter_annual_interest_rate">Please enter annual interest rate.</string>
    <string name="home_budget">Home Budget</string>
    <string name="monthly_expenses">monthly expenses</string>
    <string name="mortgage">mortgage</string>
    <string name="utilities">utilities</string>
    <string name="insurance">insurance</string>
    <string name="general_expenses">general\nexpenses</string>
    <string name="income_information">Income Information</string>
    <string name="monthly_income">Monthly Income</string>
    <string name="spouses_monthly_income">Spouse\'s Monthly Income</string>
    <string name="mortgage_and_debt">Mortgage and Debt</string>
    <string name="house_payment">House Payment</string>
    <string name="auto_payment">Auto Payment</string>
    <string name="auto_payment2">Auto Payment 2</string>
    <string name="credit_card_payment">Credit Card Payment</string>
    <string name="other_debt_payment">Other Debt Payment</string>
    <string name="utilities2">Utilities</string>
    <string name="electric">Electric</string>
    <string name="gas">Gas</string>
    <string name="oil">Oil</string>
    <string name="sewer_and_water">Sewer and Water</string>
    <string name="garbage">Garbage</string>
    <string name="telephone">Telephone</string>
    <string name="cellular">Cellular</string>
    <string name="tv_and_internet">TV and Internet</string>
    <string name="insurance2">Insurance</string>
    <string name="auto">Auto</string>
    <string name="life">Life</string>
    <string name="health">Health</string>
    <string name="general_expenses2">General Expenses</string>
    <string name="food">Food</string>
    <string name="auto_gas">Auto Gas</string>
    <string name="donations">Donations</string>
    <string name="home_maintenance">Home Maintenance</string>
    <string name="medical">Medical</string>
    <string name="child_care">Child Care</string>
    <string name="other_expenses">Other Expenses</string>
    <string name="k401k_savings">401k Savings</string>
    <string name="annual_salary">Annual Salary</string>
    <string name="enter_salary_amount">Enter salary amount</string>
    <string name="percent_to_contribute">Percent to Contribute</string>
    <string name="enter_contribution_amount">Enter contribution amount</string>
    <string name="current_age">Current Age</string>
    <string name="enter_age">Enter age</string>
    <string name="retirement_age">Retirement Age</string>
    <string name="current_401k_balance">Current 401k Balance</string>
    <string name="enter_amount">Enter amount</string>
    <string name="annual_rate_of_return">Annual Rate of Return</string>
    <string name="employer_match">Employer Match</string>
    <string name="enter_match">Enter match</string>
    <string name="employer_match_ends">Employer Match Ends</string>
    <string name="enter_match_ends">Enter match ends</string>
    <string name="saving_goal">Saving Goal</string>
    <string name="years_required_to_meet_goal">years required\nto meet goal</string>
    <string name="time_required_to_meet_goal">time required\nto meet goal</string>
    <string name="months_required_to_meet_goal">months required\nto meet goal</string>
    <string name="monthly_savings_required_to_meet_goal">monthly savings\nrequired to meet goal</string>
    <string name="savings_goal">Savings Goal</string>
    <string name="enter_goal_amount">Enter goal amount</string>
    <string name="currently_saved">Currently Saved</string>
    <string name="enter_saved_amount">Enter saved amount</string>
    <string name="years_to_save">Years to save</string>
    <string name="monthly_savings">Monthly Savings</string>
    <string name="rate_of_return">Rate of Return</string>
    <string name="please_enter_savings_goal">Please enter savings goal.</string>
    <string name="please_enter_currently_saved">Please enter currently saved.</string>
    <string name="please_enter_years_to_save">Please enter years to save.</string>
    <string name="please_enter_monthly_savings">Please enter monthly savings.</string>
    <string name="please_enter_rate_of_return">Please enter rate of return.</string>
    <string name="credit_card">Credit Card Debt Payoff</string>
    <string name="payment_required_to_meet_goal">payment required\nto meet goal</string>
    <string name="card_balance">Card Balance</string>
    <string name="enter_rate_amount">Enter rate amount</string>
    <string name="months_until_debt_free">Months Until Debt Free</string>
    <string name="payment_per_month">Payment per Month</string>
    <string name="enter_payment_amount">Enter payment amount</string>
    <string name="please_enter_card_balance">Please enter card balance.</string>
    <string name="please_enter_months_until_debt_free">Please enter months until debt free.</string>
    <string name="please_enter_payment_per_month">Please enter payment per month.</string>
    <string name="restaurant_tip">Restaurant Tip</string>
    <string name="total_tip_amount">total tip amount</string>
    <string name="check_amount">Check Amount</string>
    <string name="enter_check_amount">Enter check amount</string>
    <string name="number_of_people">Number of People</string>
    <string name="enter_people_number">Enter people number</string>
    <string name="tip_percent">Tip Percent</string>
    <string name="enter_percent">Enter percent</string>
    <string name="please_enter_check_amount">Please enter check amount.</string>
    <string name="please_enter_number_of_people">Please enter number of people.</string>
    <string name="please_enter_tip_percent">Please enter tip percent.</string>
    <string name="clear_all">CLEAR ALL</string>
    <string name="calculate">CALCULATE</string>
    <string name="charitable_donations">Charitable Donations</string>
    <string name="mileage">Mileage</string>
    <string name="non_reimbursed_charges">Non-Reimbursed Charges</string>
    <string name="receipts">Receipts</string>
    <string name="add_donation">Add Donation</string>
    <string name="donation_amount">Donation Amount</string>
    <string name="enter_donation_amount">Enter donation amount</string>
    <string name="donation_name">Donation Name</string>
    <string name="enter_donation_name">Enter donation name</string>
    <string name="send_donation_history">SEND DONATION HISTORY</string>
    <string name="please_enter_donation_amount">Please enter donation amount.</string>
    <string name="please_enter_donation_name">Please enter donation name.</string>
    <string name="please_enter_date">Please enter date.</string>
    <string name="add_mileage">Add Mileage</string>
    <string name="mileage_bamount">Beginning Mileage</string>
    <string name="mileage_eamount">Ending Mileage</string>
    <string name="enter_mileage_amount">Enter mileage amount</string>
    <string name="reason">Reason</string>
    <string name="enter_reason">Enter Reason</string>
    <string name="send_mileage_history">SEND MILEAGE HISTORY</string>
    <string name="car_make">Car Make</string>
    <string name="car_model">Car Model</string>
    <string name="car_year">Car Year</string>
    <string name="enter_make">Enter make</string>
    <string name="enter_model">Enter model</string>
    <string name="enter_year">Enter year</string>
    <string name="please_enter_beginning_mileage">Please enter beginning mileage.</string>
    <string name="please_enter_ending_mileage">Please enter ending mileage.</string>
    <string name="please_enter_reason">Please enter reason.</string>
    <string name="please_enter_car_make">Please enter car make.</string>
    <string name="please_enter_car_model">Please enter car model.</string>
    <string name="please_enter_car_year">Please enter car year.</string>
    <string name="add_charge">Add Charge</string>
    <string name="charge_amount">Charge Amount</string>
    <string name="enter_charge_amount">Enter charge amount</string>
    <string name="charge_name">Charge Name</string>
    <string name="take_picture_doc">Take a picture of document</string>
    <string name="document_name">Document Name</string>
    <string name="enter_document_name">Enter document name</string>
    <string name="preview">PREVIEW</string>
    <string name="send">SEND</string>
</resources>