<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <include
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_header_height"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="-7sp"
        layout="@layout/navigation_header" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/amort_content"
        android:layout_below="@+id/header"
        android:background="@color/calc_value_result_bg" >

        <com.bbs.widgets.BBSCalculatorResult
            android:id="@+id/wid_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5sp"
        android:layout_above="@+id/amort_content"
        android:background="@drawable/home_menu_shadow" />

    <LinearLayout
        android:id="@+id/amort_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="@dimen/bbs_content_padding" >

        <RelativeLayout
            android:id="@+id/amount_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/slide_item_margin_small"
            android:padding="@dimen/bbs_element_padding" >

            <com.bbs.widgets.BBSTextView
                android:id="@+id/amount_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="@dimen/edittext_title_padding"
                android:text="@string/check_amount"
                android:textColor="@color/slide_menu_text_color_active"
                android:textSize="@dimen/text_font_size_light" />

            <EditText
                android:id="@+id/amount_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/amount_title"
                android:layout_centerVertical="true"
                android:background="@drawable/drawable_edittext_underline"
                android:hint="@string/enter_check_amount"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textColor="@color/bbs_menu_text_color"
                android:textSize="@dimen/text_font_size_big" />
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/people_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/slide_item_margin_small"
            android:padding="@dimen/bbs_element_padding" >

            <com.bbs.widgets.BBSTextView
                android:id="@+id/people_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="@dimen/edittext_title_padding"
                android:text="@string/number_of_people"
                android:textColor="@color/slide_menu_text_color_active"
                android:textSize="@dimen/text_font_size_light" />

            <EditText
                android:id="@+id/people_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/people_title"
                android:layout_centerVertical="true"
                android:background="@drawable/drawable_edittext_underline"
                android:hint="@string/enter_people_number"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textColor="@color/bbs_menu_text_color"
                android:textSize="@dimen/text_font_size_big" />
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/tip_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/slide_item_margin_small"
            android:padding="@dimen/bbs_element_padding" >

            <com.bbs.widgets.BBSTextView
                android:id="@+id/tip_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="@dimen/edittext_title_padding"
                android:text="@string/tip_percent"
                android:textColor="@color/slide_menu_text_color_active"
                android:textSize="@dimen/text_font_size_light" />

            <EditText
                android:id="@+id/tip_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tip_title"
                android:layout_centerVertical="true"
                android:background="@drawable/drawable_edittext_underline"
                android:hint="@string/enter_percent"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textColor="@color/bbs_menu_text_color"
                android:textSize="@dimen/text_font_size_big" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/btn_action_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/slide_item_margin_smaller"
            android:weightSum="10" >

            <View
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="0sp"
                android:layout_height="100sp"
                android:layout_marginRight="18sp"
                android:layout_weight="4"
                android:background="@drawable/btn_white_bg"
                android:contentDescription="@string/app_name"
                android:gravity="center"
                android:text="@string/clear_all"
                android:textColor="@color/slide_menu_text_color_active"
                android:textSize="@dimen/text_font_size" />

            <Button
                android:id="@+id/btn_calc"
                android:layout_width="0sp"
                android:layout_height="100sp"
                android:layout_weight="4"
                android:background="@drawable/btn_blue_bg"
                android:contentDescription="@string/app_name"
                android:gravity="center"
                android:text="@string/calculate"
                android:textColor="@color/white"
                android:textSize="@dimen/text_font_size" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>